this eventually fixes lineclamp bug on ios devices but im not sure

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -78,6 +78,7 @@
 
     @include media-breakpoint-down(lg) {
       -webkit-line-clamp: 3;
+      line-clamp: 3;
       max-height: 5rem;
     }
   }
